<resources>
    <string name="app_name">Color My Views</string>
    <string name="boxOneText">Box One</string>
    <string name="boxTwoText">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="blue_button">Make Blue</string>
    <string name="yellow_button">Make Yellow</string>
    <string name="red_button">Make Red</string>
</resources>
