<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one_text"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_margin="16dp"
        android:padding="14dp"
        android:text="@string/boxOneText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two_text"
        style="@style/boxStyle"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/boxTwoText"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_one_text" />

    <TextView
        android:id="@+id/box_three_text"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@id/box_four_text"
        app:layout_constraintLeft_toRightOf="@id/box_two_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/box_two_text"
        tools:layout_editor_absoluteX="212dp" />

    <TextView
        android:id="@+id/box_four_text"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@id/box_five_text"
        app:layout_constraintLeft_toRightOf="@id/box_two_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_three_text"
        tools:layout_editor_absoluteX="222dp" />

    <TextView
        android:id="@+id/box_five_text"
        style="@style/boxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@id/box_two_text"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toRightOf="@id/box_two_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_five_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/blue_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
        app:layout_constraintEnd_toStartOf="@id/button_yellow"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/yellow_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_red"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/button_blue"
        app:layout_constraintTop_toBottomOf="@id/box_two_text"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/red_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>